--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   --white: hsl(0, 0%, 100%);
   --paleBlue: hsl(221, 100%, 96%);
   --lightLavender: hsl(241, 100%, 89%);
-  --darkGrayBlue: hsl(224, 30%, 27%);
+  --darkGrayBlue: #303b5a;
 }
 
 body {
@@ -163,6 +163,10 @@ body {
   background-color: #ffb01f23;
 }
 
+.boxinfo2 .memory h3{
+  color: var(--orangeyYellow);
+}
+
 .boxinfo2 .memory p {
   font-size: 1.4rem;
   margin-left: 5.8rem;
@@ -171,6 +175,10 @@ body {
 
 .boxinfo2 .verbal {
   background-color: #00bd9123;
+}
+
+.boxinfo2 .verbal h3{
+  color: var(--greenTeal);
 }
 
 .boxinfo2 .verbal p {
@@ -183,6 +191,10 @@ body {
   background-color: #1125d423;
 }
 
+.boxinfo2 .visual h3{
+  color: var(--cobaltBlue);
+}
+
 .boxinfo2 .visual p {
   font-size: 1.4rem;
   margin-left: 7.5rem;
@@ -192,7 +204,6 @@ body {
 .boxinfo2 a {
   text-align: center;
   padding-block: 1.5rem;
-
   text-decoration: none;
   font-family: "Hanken Grotesk";
   font-size: 1.4rem;
@@ -210,5 +221,52 @@ body {
 
 .boxinfo2 .botao:hover {
   cursor: pointer;
-  background-color: var(--darkGrayBlue);
+  background: #303b5a;
+  transition: 0.32s;
+}
+
+
+.attribution{
+  font-family: "Hanken Grotesk";
+  font-size: 1.6rem;
+}
+
+.attribution a{
+  text-decoration: none;
+  color: var(--violetBlue);
+}
+
+@media screen and (max-width: 600px) {
+  
+  .boxInfo {
+    margin-top: -3.5rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    box-shadow: 8px 12px 5px #00000010;
+    border-radius: 1rem;
+    min-width: 100vw;
+  }
+
+  .boxinfo1 .score {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    text-align: center;
+    background: linear-gradient(0deg, #2421ca00, #4e21ca);
+    border-radius: 50%;
+    width: 15rem;
+    height: 15rem;
+    gap: 2rem;
+    margin-left: 12rem;
+    margin-top: 3rem;
+  }
+
+  .boxinfo1 .text  {
+  margin-left: 10rem;
+  }
+
+  .boxinfo2 .botao {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
 }
